# Optimized-2D-Image-Convolution

./: .gitignore
FastImagConvolutioin/: CMakeLists.txt  FastImagConvolutioin.cpp  FastImagConvolutioin.h
FastImagConvolutioin/ImageConvolution/inc/: FastImagConvolutioin.hpp
FastImagConvolutioin/ImageConvolution/src/: reference.cpp
